[tool.poetry]
name = "pylnbits"
version = "0.0.6"
description = "Python library for LNBits."
authors = ["bitkarrot <info@bitkarrot.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pre-commit = "2.13.0"
PyYAML = "6.0"
aiohttp = "3.8.4"

[tool.poetry.dev-dependencies]
pre_commit = "^2.1.0"
black = "^23.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12", "setuptools>=30.3.0,<50"]
build-backend = "poetry.masonry.api"
