[tool.poetry]
name = "pylnbits"
version = "0.0.7"
description = "Python library for LNBits."
authors = ["bitkarrot <info@bitkarrot.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pre-commit = "2.21.0"
PyYAML = "6.0.1"
aiohttp = "3.8.5"

[tool.poetry.dev-dependencies]
pre_commit = "^2.1.0"
black = "^23.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry>=0.12", "setuptools>=30.3.0,<50"]
build-backend = "poetry.masonry.api"
