[tool.poetry]
name = "pylnbits"
version = "0.0.8"
description = "Python library for LNBits."
authors = ["bitkarrot <info@bitkarrot.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.6"
pre-commit = "3.5.0"
PyYAML = "6.0.1"
aiohttp = "3.9.1"
lnurl= "^0.3.6"
lnbits = "^0.10"
mkdocs = "1.5.3"
mkdocstrings = "0.24.0"


[tool.poetry.dev-dependencies]
pre_commit = "^3.5.0"
black = "^23.3"
pytest = "^7.2.1"
cashu = "0.9.0"


[build-system]
requires = ["poetry>=0.12", "setuptools>=30.3.0,<50"]
build-backend = "poetry.masonry.api"
